#25 Fixed accept/deny buttons not visible

--- a/src/styles/Layer/_Layer.scss
+++ b/src/styles/Layer/_Layer.scss
@@ -127,7 +127,7 @@
   button {
     &.denyAll,
     &.allowAll {
-      display: none;
+      white-space: wrap;
 
       @media (min-width: v.$sm) {
         display: inline-block;
